Parsing, 3 Address Code, Type Inference